--- a/style2.css
+++ b/style2.css
@@ -55,7 +55,7 @@
     }
     
     #banner {
-        background: url('/images/banner.jpg') no-repeat 0 0;
+        background: url('banner.jpg') no-repeat 0 0;
         background-size: cover;
     }
     
@@ -88,7 +88,7 @@
     }
     
     #testimonials {
-        background: url(/images/background.jpg) no-repeat 0 0;
+        background: url(background.jpg) no-repeat 0 0;
         background-size: cover;
         padding: 50px 0;
         position: relative;
