--- a/style2.css
+++ b/style2.css
@@ -88,7 +88,7 @@
     }
     
     #testimonials {
-        background: url(background.jpg) no-repeat 0 0;
+        background: url('background.jpg') no-repeat 0 0;
         background-size: cover;
         padding: 50px 0;
         position: relative;
